--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3"
