--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "daisyui": "^4.12.10",
     "next": "13.5.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
